force-app/main/default/objects/Contract_Handoff2__c/Contract_Handoff2__c.object-meta.xml
<CustomObject>
    <label>Contract Handoff2</label>
    <nameField>
        <displayFormat>CH-{00000}</displayFormat>
        <label>Contract Handoff2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Handoffs2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>