force-app/main/default/objects/Contract_Handoff2__c/fields/Attachments__c.field-meta.xml
<CustomField>
    <fullName>Attachments__c</fullName>
    <description>&lt;any relevant Project docs, etc.&gt;</description>
    <inlineHelpText>&lt;any relevant Project docs, etc.&gt;</inlineHelpText>
    <label>Attachments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>