force-app/main/default/objects/Contract_Handoff2__c/fields/Blocker__c.field-meta.xml
<CustomField>
    <fullName>Blocker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blocker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contract Handoffs2</relationshipLabel>
    <relationshipName>Contract_Handoffs2</relationshipName>
    <type>Lookup</type>
</CustomField>