force-app/main/default/objects/Contract_Handoff2__c/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contract Handoffs2 (Champion)</relationshipLabel>
    <relationshipName>Contract_Handoffs21</relationshipName>
    <type>Lookup</type>
</CustomField>