force-app/main/default/objects/Contract_Handoff2__c/fields/Company_Background__c.field-meta.xml
<CustomField>
    <fullName>Company_Background__c</fullName>
    <description>Please give relevant company background</description>
    <inlineHelpText>Please give relevant company background</inlineHelpText>
    <label>Company Background</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>