force-app/main/default/objects/Contract_Handoff2__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Handoffs2</relationshipLabel>
    <relationshipName>Contract_Handoffs2</relationshipName>
    <type>Lookup</type>
</CustomField>