force-app/main/default/objects/Contract_Handoff2__c/fields/Contract_Information__c.field-meta.xml
<CustomField>
    <fullName>Contract_Information__c</fullName>
    <description>Industry - Please enter their industry - Beer, Beverage, Produce, Fuel, etc.
Geographic Area - Please enter their geographical area
Number of Depots - Please enter the number of depots
Number of Customer Locations - Please enter the number of cust locations
Fleet Size - Please enter their Fleet Size (total &amp; per depot if more than 1)</description>
    <inlineHelpText>Industry - Please enter their industry-Beer, Beverage, Produce, Fuel, etc.
Geographic Area- Please enter their geographical area
Number of Depots - Please enter the number of depots
Number of Customer Locations - Please enter the number of cust locatio</inlineHelpText>
    <label>Contract Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>