force-app/main/default/objects/Contract_Handoff2__c/fields/Host_Exported_Flat_Files_or_Web_Services__c.field-meta.xml
<CustomField>
    <fullName>Host_Exported_Flat_Files_or_Web_Services__c</fullName>
    <description>Web Services/Flat File Creation - Has the need for a Space Delimited (NOT CSV) format been explained?  How do they anticipate begin able to create this file?  Please indicate any potential pitfalls with file creation.</description>
    <inlineHelpText>Web Services/Flat File Creation - Has the need for a Space Delimited (NOT CSV) format been explained?  How do they anticipate begin able to create this file?  Please indicate any potential pitfalls with file creation.</inlineHelpText>
    <label>Host Exported Flat Files or Web Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>