force-app/main/default/objects/Contract_Handoff2__c/fields/Host_System__c.field-meta.xml
<CustomField>
    <fullName>Host_System__c</fullName>
    <description>Host Name - Please provide name and a description of their primary ERP (host) system.  Does an existing interface exists?</description>
    <inlineHelpText>Host Name - Please provide name and a description of their primary ERP (host) system.  Does an existing interface exists?</inlineHelpText>
    <label>Host System</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>