force-app/main/default/objects/Contract_Handoff2__c/fields/Legacy_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Source_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy_Source_Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>