force-app/main/default/objects/Contract_Handoff2__c/fields/MobileCast__c.field-meta.xml
<CustomField>
    <fullName>MobileCast__c</fullName>
    <description>Phone type/name - Please note the type of phone the customer is purchasing.  and specific phone, if known **If suggested by sales, please provide the 3rd party suggested for MobileCast devices - name of contact &amp; email/phone information</description>
    <inlineHelpText>Phone type/name - Please note the type of phone the customer is purchasing.  and specific phone, if known **If suggested by sales, please provide the 3rd party suggested for MobileCast devices - name of contact &amp; email/phone information</inlineHelpText>
    <label>MobileCast</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>