force-app/main/default/objects/Contract_Handoff2__c/fields/Point_of_Contact_for_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact_for_Implementation__c</fullName>
    <description>Please give contact detail, and any pertinent background information.

Point of Contact Name - 
Point of Contact Email -
Point of Contact Phone # -</description>
    <inlineHelpText>Please give contact detail, and any pertinent background information.

Point of Contact Name - 
Point of Contact Email -
Point of Contact Phone # -</inlineHelpText>
    <label>Point of Contact for Implementation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>