force-app/main/default/objects/Contract_Handoff2__c/fields/Product_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Product_Drivers__c</fullName>
    <description>List the events which caused the customer to purchase our products.</description>
    <inlineHelpText>List the events which caused the customer to purchase our products.</inlineHelpText>
    <label>Product Drivers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>