force-app/main/default/objects/Contract_Handoff2__c/fields/Product_Goals__c.field-meta.xml
<CustomField>
    <fullName>Product_Goals__c</fullName>
    <description>Provide the overall goal of using our products including the customer&apos;s measure of success criteria, perceived benefits of using our products.  This is especially important in dynamic scnerios i.e. taking trucks off the road, reducing miles, overtime, etc.</description>
    <inlineHelpText>Provide the overall goal of using our products including the customer&apos;s measure of success criteria, perceived benefits of using our products.  This is especially important in dynamic scnerios i.e. taking trucks off the road, reducing miles, overtime, etc</inlineHelpText>
    <label>Product Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>