force-app/main/default/objects/Contract_Handoff2__c/fields/Product_Usage__c.field-meta.xml
<CustomField>
    <fullName>Product_Usage__c</fullName>
    <description>How will they be using the software?  Please note any special usage - such as MC without RN or other outside product integration.</description>
    <inlineHelpText>How will they be using the software?  Please note any special usage - such as MC without RN or other outside product integration.</inlineHelpText>
    <label>Product Usage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>