force-app/main/default/objects/Contract_Handoff2__c/fields/Products_question__c.field-meta.xml
<CustomField>
    <fullName>Products_question__c</fullName>
    <description>Provide a list of RTI Porudcts sold to the customer including the priority/order in which the customer expects the products to be delivered.  - RN, TP MC, FL, TM, RIC, etc</description>
    <inlineHelpText>Provide a list of RTI Porudcts sold to the customer including the priority/order in which the customer expects the products to be delivered.  - RN, TP MC, FL, TM, RIC, etc</inlineHelpText>
    <label>Products (question)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>