force-app/main/default/objects/Contract_Handoff2__c/fields/Project_Organization__c.field-meta.xml
<CustomField>
    <fullName>Project_Organization__c</fullName>
    <description>List all project stakeholders including contact information, title, phone, and email address</description>
    <inlineHelpText>List all project stakeholders including contact information, title, phone, and email address</inlineHelpText>
    <label>Project Organization</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>