force-app/main/default/objects/Contract_Handoff2__c/fields/Project_Overview__c.field-meta.xml
<CustomField>
    <fullName>Project_Overview__c</fullName>
    <description>Give a very brief summary of the project outlining the planned objectives.</description>
    <inlineHelpText>Give a very brief summary of the project outlining the planned objectives.</inlineHelpText>
    <label>Project Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>