force-app/main/default/objects/Contract_Handoff2__c/fields/Question_2__c.field-meta.xml
<CustomField>
    <fullName>Question_2__c</fullName>
    <label>Question 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>