force-app/main/default/objects/Contract_Handoff2__c/fields/Roadnet__c.field-meta.xml
<CustomField>
    <fullName>Roadnet__c</fullName>
    <description>Routing Type -
Same/Next Day - 
Multiple Day/Overnight Routes, pickups, backhauls, or reloads
Number of stops per route
Time Windows
Driver Pay Type
Number of Vehicles
Hours Per Route
Order Cutoff</description>
    <inlineHelpText>Routing Type -
Same/Next Day - 
Multiple Day/Overnight Routes, pickups, backhauls, or reloads -
Number of stops per route
Time Windows
Driver Pay Type
Number of Vehicles
Hours Per Route
Order Cutoff</inlineHelpText>
    <label>Roadnet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>