force-app/main/default/objects/Contract_Handoff2__c/fields/Route_Test_or_RFP__c.field-meta.xml
<CustomField>
    <fullName>Route_Test_or_RFP__c</fullName>
    <description>Sales Engineer- If a route test was completed, which sales engineer (se) was involved?  Note: if a route test was completed, SE should be included during the handoff meeting.  Any available demo files/work should be sent to the project manager.</description>
    <inlineHelpText>Sales Engineer- If a route test was completed, which sales engineer (se) was involved?  Note: if a route test was completed, SE should be included during the handoff meeting.  Any available demo files/work should be sent to the project manager.</inlineHelpText>
    <label>Route Test or RFP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>