force-app/main/default/objects/Contract_Handoff2__c/fields/Scenarios__c.field-meta.xml
<CustomField>
    <fullName>Scenarios__c</fullName>
    <description>Were you able to uncover any workarounds? If yes, please provide details.</description>
    <inlineHelpText>Were you able to uncover any workarounds? If yes, please provide details.</inlineHelpText>
    <label>Scenarios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>