force-app/main/default/objects/Contract_Handoff2__c/fields/Target_Schedule_Information__c.field-meta.xml
<CustomField>
    <fullName>Target_Schedule_Information__c</fullName>
    <description>Please give schedule detail, and any hard cutoffs or pertinent issues we needs to know about and work around

Target End Date - Please enter their Target End Date if applicable</description>
    <inlineHelpText>Please give schedule detail, and any hard cutoffs or pertinent issues we needs to know about and work around

Target End Date - Please enter their Target End Date if applicable</inlineHelpText>
    <label>Target Schedule Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>