force-app/main/default/objects/Contract_Handoff2__c/fields/Telematics__c.field-meta.xml
<CustomField>
    <fullName>Telematics__c</fullName>
    <description>Please provide the customer goals for Telematics such as idling reduction, speeding, etc</description>
    <inlineHelpText>Please provide the customer goals for Telematics such as idling reduction, speeding, etc</inlineHelpText>
    <label>Telematics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>