force-app/main/default/objects/Contract_Handoff2__c/fields/Terrority_Planner_question__c.field-meta.xml
<CustomField>
    <fullName>Terrority_Planner_question__c</fullName>
    <description>Please note TP data - rerouting for drivers, or sales or both?  Please note if known: Cycle - Weekly, monthly, quarterly deliveries

Seasonality - High and Low seasons, also sometimes holiday season</description>
    <inlineHelpText>Please note TP data - rerouting for drivers, or sales or both?  Please note if known: Cycle - Weekly, monthly, quarterly deliveries

Seasonality - High and Low seasons, also sometimes holiday season</inlineHelpText>
    <label>Terrority Planner (question)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>