force-app/main/default/objects/Contract_Handoff2__c/fields/Vehicle_List__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_List__c</fullName>
    <description>Is there a vehicle list available?  If not, when will it be available?</description>
    <inlineHelpText>Is there a vehicle list available?  If not, when will it be available?</inlineHelpText>
    <label>Vehicle List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>